test/statements/manage/manageNonAggregate.good
manageNonAggregate.chpl:2: error: cannot use a non-context manager in a 'manage' statement
