test/statements/manage/manageNonAggregate.chpl
var a = 1;
manage a {}
